syntax = "proto3";
package flmainchain.fedlearning.v1;

option go_package = "flmainchain/x/fedlearning/types";

// FinalAtt defines the FinalAtt message.
message FinalAtt {
  uint64 round_id = 1;
  repeated string lnode_addresses = 2;
  repeated string scores = 3;
}
